--- a/src/components/WindowTable/window-table.component.pug
+++ b/src/components/WindowTable/window-table.component.pug
@@ -1,9 +1,9 @@
 // @import .scss => styles
 div
-  pre {rowSpan + ' x ' + colSpan}
-  pre {overallWidth + ' x ' + overallHeight}
-  pre {this.props.width + ' x ' + this.props.height}
-  table(className='{styles.table}', border='{1}')
+  //- pre {rowSpan + ' x ' + colSpan}
+  //- pre {overallWidth + ' x ' + overallHeight}
+  //- pre {this.props.width + ' x ' + this.props.height}
+  table(className='{styles.table}', border='{0}', cellPadding='{0}', cellSpacing='{0}')
     tbody
       tr(@if='top')
         td(@if='left', className='{styles.bg_50}')
