--- a/src/components/WindowTable/window-table.component.pug
+++ b/src/components/WindowTable/window-table.component.pug
@@ -1,55 +1,73 @@
 // @import .scss => styles
-div(className='{styles.root}')
+div
+  div(className='{styles.root}')
 
-  div(@if='top', className='{styles.guide}',
-    style='{{ top: top.height, width: contentWidth }}'
-    )
-  div(@if='bottom', className='{styles.guide}',
-    style='{{ top: contentHeight - top.height, width: contentWidth }}'
-    )  
-  div(@if='left', className='{styles.guide}',
-    style='{{ left: left.width, height: contentHeight }}'
-    )  
-  div(@if='right', className='{styles.guide}',
-    style='{{ left: contentWidth - left.width, height: contentHeight }}'
-    )  
-  //- pre {rowSpan + ' x ' + colSpan}
-  //- pre {overallWidth + ' x ' + overallHeight}
-  //- pre {this.props.width + ' x ' + this.props.height}
+    .guideline-top(@if='top',
+      ref='{this.guideLineRef.top}',
+      className='{styles.guide}',
+      style='{{ top: top.height, width: contentWidth }}'
+      )
+    .guideline-bottom(@if='bottom',
+      ref='{this.guideLineRef.bottom}',
+      className='{styles.guide}',
+      style='{{ bottom: bottom.height + (scrollbarX ? scrollbarWidth : 0), width: contentWidth }}'
+      )  
+    .guideline-left(@if='left',
+      ref='{this.guideLineRef.left}',
+      className='{styles.guide}',
+      style='{{ left: left.width, height: contentHeight }}'
+      )  
+    .guideline-right(@if='right',
+      ref='{this.guideLineRef.right}',
+      className='{styles.guide}',
+      style='{{ right: right.width + (scrollbarY ? scrollbarWidth : 0), height: contentHeight }}'
+      )  
+    //- pre {rowSpan + ' x ' + colSpan}
+    //- pre {overallWidth + ' x ' + overallHeight}
+    //- pre {this.props.width + ' x ' + this.props.height}
 
-  table(className='{styles.table}', border='{0}', cellPadding='{0}', cellSpacing='{0}',
-    ref='{this.tableRef}')
-    tbody
-      tr(@if='top')
-        td(@if='left', className='{styles.bg_50}')
-          | {this.renderGrid({ ...top, ...left })}
-        td(className='{styles.bg_100}')
-          | {this.renderGrid({ section: 'top', ...center, ...top })}
-        td(@if='right', className='{styles.bg_200}')
-          | {this.renderGrid({ ...top, ...right })}
-        td(@if='scrollbarY', rowSpan='{rowSpan}')
-          Scrollbar(__jsx='{...scrollbar.y}')
+    table(className='{styles.table}', border='{0}', cellPadding='{0}', cellSpacing='{0}',
+      ref='{this.tableRef}')
+      tbody
+        tr(@if='top')
+          //- td(@if='left', className='{styles.bg_50}')
+          td(@if='left')
+            | {this.renderGrid({ ...top, ...left })}
+          //- td(className='{styles.bg_100}')
+          td
+            | {this.renderGrid({ section: 'top', ...center, ...top })}
+          //- td(@if='right', className='{styles.bg_200}')
+          td(@if='right')
+            | {this.renderGrid({ ...top, ...right })}
+          td(@if='scrollbarY', rowSpan='{rowSpan}')
+            Scrollbar(__jsx='{...scrollbar.y}')
 
-      tr
-        td(@if='left', className='{styles.bg_100}')
-          | {this.renderGrid({ section: 'left', ...center, ...left })}
-        td(className='{styles.bg_200}')
-          | {this.renderGrid({ section: 'center', ...center })}
-        td(@if='right', className='{styles.bg_300}')
-          | {this.renderGrid({ section: 'right', ...center, ...right })}
-        td(@if='scrollbarY && !top', rowSpan='{rowSpan}')
-          Scrollbar(__jsx='{...scrollbar.y}')
+        tr
+          //- td(@if='left', className='{styles.bg_100}')
+          td(@if='left')
+            | {this.renderGrid({ section: 'left', ...center, ...left })}
+          //- td(className='{styles.bg_200}')
+          td
+            | {this.renderGrid({ section: 'center', ...center })}
+          //- td(@if='right', className='{styles.bg_300}')
+          td(@if='right')
+            | {this.renderGrid({ section: 'right', ...center, ...right })}
+          td(@if='scrollbarY && !top', rowSpan='{rowSpan}')
+            Scrollbar(__jsx='{...scrollbar.y}')
 
-      tr(@if='bottom')
-        td(@if='left', className='{styles.bg_200}')
-          | {this.renderGrid({ ...bottom, ...left })}
-        td(className='{styles.bg_300}')
-          | {this.renderGrid({ section: 'bottom', ...center, ...bottom })}
-        td(@if='right', className='{styles.bg_400}')
-          | {this.renderGrid({ ...bottom, ...right })}
+        tr(@if='bottom')
+          //- td(@if='left', className='{styles.bg_200}')
+          td(@if='left')
+            | {this.renderGrid({ ...bottom, ...left })}
+          //- td(className='{styles.bg_300}')
+          td
+            | {this.renderGrid({ section: 'bottom', ...center, ...bottom })}
+          //- td(@if='right', className='{styles.bg_400}')
+          td(@if='right')
+            | {this.renderGrid({ ...bottom, ...right })}
 
-      tr(@if='scrollbarX')
-        td(colSpan='{colSpan}')
-          Scrollbar(__jsx='{...scrollbar.x}')
-        td
-    strong(ref='{this.titleRef}', style='{{ textAlign: "right" }}')
+        tr(@if='scrollbarX')
+          td(colSpan='{colSpan}')
+            Scrollbar(__jsx='{...scrollbar.x}')
+          td
+  strong(ref='{this.titleRef}', style='{{ textAlign: "right" }}')
