--- a/src/components/WindowTable/window-table.component.scss
+++ b/src/components/WindowTable/window-table.component.scss
@@ -27,6 +27,12 @@
     // -ms-overflow-style: -ms-autohiding-scrollbar!important;
   }
 }
+:global(.no-scroll) {
+  background: blue !important;
+}
+:global(.full-scroll) {
+  background: red !important;
+}
 :global(.drr) {
   border: 5px green solid;
 }
