--- a/src/components/WindowTable/window-table.component.scss
+++ b/src/components/WindowTable/window-table.component.scss
@@ -1,30 +1,82 @@
 .root {
   position: relative;
   // border: orange 5px solid;
+
+  
 }
 .table {
   padding: 0;
   margin: 0;
   border-spacing: 0;
   td {
-    padding: 0;
+    :global(.section-top) {
+      background:yellow;
+    }
+    :global(.section-left) {
+      background:orange;
+    }
+    :global(.section-right) {
+      background:lightyellow;
+    }
+    :global(.section-bottom) {
+      background:lightgreen;
+      // border-bottom: none;
+    }
+    :global(.section-center) {
+      background:lightblue;
+    }
+    // :global(.cell-h-first) {
+    //   background: yellow;
+    // }
+    // :global(.cell-h-last) {
+    //   background: orange;
+    // }
+    // :global(.cell-v-last) {
+    //   background: green;
+    // }
     margin: 0;
     vertical-align: top;
+    // div {
+    //   overflow: hidden !important;
+    // }
+    position: relative;
+    .gridWrap >div {
+      position: absolute;
+      display: flex;
+      -webkit-overflow-scrolling: touch;  -webkit-overflow-scrolling: touch;
+    }
     ::-webkit-scrollbar {
-      width: 0;
-      height: 0;
+      display: none !important;
+      width: 1px !important;
+      height: 0 !important;
+      background-color: transparent;
+      -webkit-appearance: none;
+      --webkit-appearance: none;
+      // opacity: 0;
+      
+    }
 
+
+    ::-webkit-scrollbar:vertical {
       display: none !important;
       width: 0 !important;
       height: 0 !important;
       background-color: transparent;
-      /* opacity: 0.5; */
-    }
+      -webkit-appearance: none;
+      // opacity: 0;
+  }
+    ::-webkit-scrollbar-button{height:0;width:0}
     ::-webkit-scrollbar-thumb {
+      width: 1px !important;
       display: none !important;
     }
-    // -webkit-overflow-scrolling: touch!important; 
-    // -ms-overflow-style: -ms-autohiding-scrollbar!important;
+    ::-webkit-scrollbar-track{
+      width: 1px !important;
+      display: none !important;
+    }
+
+    -webkit-overflow-scrolling: touch!important; 
+    -ms-overflow-style: -ms-autohiding-scrollbar!important;
   }
 }
 :global(.no-scroll) {
