--- a/src/components/Scrollarea/scrollarea.component.pug
+++ b/src/components/Scrollarea/scrollarea.component.pug
@@ -13,6 +13,7 @@ div(className='{styles.root}')
         //- .card(ref='{this.bumperRef}', style='{{ overflowX: "yes" }}')
           //- .shim(ref='{this.shimRef}')
   //- h1 {x} , {y}, {this.props.contentWidth}, {this.props.contentHeight}
+  //- pre {JSON.stringify(this.state)}
   div(className='{styles.wrap}',
     ref='{this.scrollWrapRef}',
     onWheel='{this.handleMousewheel}', style='{scrollWrapStyle}')
