--- a/src/components/TmpTable/window-table.component.pug
+++ b/src/components/TmpTable/window-table.component.pug
@@ -75,4 +75,4 @@ div
 
 
   br
-  strong(ref='{this.titleRef}', style='{{ textAlign: "right" }}')
+  strong(ref='{this.titleRef}', style='{{ textAlign: "left" }}')
