seperate styles and add guidance message

--- a/src/components/TmpTable/window-table.component.pug
+++ b/src/components/TmpTable/window-table.component.pug
@@ -1,6 +1,6 @@
 // @import .scss => styles
 div
-  pre {JSON.stringify(this.props.cellClassNames, null, 2)}
+  //- pre {JSON.stringify(this.props.cellClassNames, null, 2)}
   div(className='{cx(styles.root, containerStyle)}',
     ref='{this.containerRef}')
     table(className='{styles.table}', border='{0}', cellPadding='{0}', cellSpacing='{0}', ref='{this.tableRef}')
