--- a/src/components/HungryJacks/window-table.component.pug
+++ b/src/components/HungryJacks/window-table.component.pug
@@ -5,6 +5,7 @@ div
   div
     h1 {columnStartIndex} ~ {columnStopIndex}
     h1 {rowStartIndex} ~ {rowStopIndex}
+    //- pre {JSON.stringify(this.props.rows, null, 2)}
     //- h2 {items.topLeftItems.length}
   div(className='{cx(styles.root, containerStyle)}',
     ref='{this.containerRef}')
