--- a/src/components/HungryJacks/window-table.component.pug
+++ b/src/components/HungryJacks/window-table.component.pug
@@ -16,8 +16,10 @@ div
             Scrollarea(width='{contentWidth}', height='{contentHeight}',
               scrollTop='{this.state.scrollTop}'
               scrollLeft='{this.state.scrollLeft}'
-              contentWidth='{overallWidth}',
-              contentHeight='{overallHeight}',
+              //- contentWidth='{overallWidth}',
+              //- contentHeight='{overallHeight}',
+              contentWidth='{totalWidth}',
+              contentHeight='{totalHeight}',
               onScroll='{this.scrollTo}')
                 //- div(style='{{ position: "absolute", zIndex: 3, transform: "translate3d(0, 0, 0)" }}')
 
@@ -47,7 +49,6 @@ div
 
                 div(style='{{ position: "absolute", zIndex: 2, transform: "translate3d(" + (this.state.scrollLeft * -1) + "px, 0, 0)" }}')
 
-                  //- | {items.topItems}
                   | {_items.top_center}
 
                 div(style='{{ position: "absolute", zIndex: 2, transform: "translate3d(0, " + (this.state.scrollTop * -1) + "px, 0)" }}')
